tests/good/test320.tig
let
  type iarr = array of int
  var x := range(0,9)
  var arr := iarr[10] of 100
in
  arr[x]
end